feature: 代码重构，添加ProtocolNames.java并更新相关配置